# qoro-pyscf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: API_REFERENCE.md  OVERVIEW.md
examples/: 01_h2_dissociation.py  02_lih_uccsd.py  03_gpu_vs_cpu.py  04_mps_bond_dimension.py  05_casscf_orbital_opt.py  06_nevpt2.py  07_dipole_moment.py  08_geometry_opt.py  09_upccd_paired_doubles.py  10_gpu_benchmark.py  11_adapt_vqe.py  12_custom_qcc.py  13_iterative_qcc_fidelity.py  14_ethylene_uv_vis.ipynb  14_ethylene_uv_vis.py  14_qsci.py  README.md
examples/butyronitrile_dissociation/: README.md  plot_results.py  run_cn_dissociation.py
examples/butyronitrile_dissociation/results/: butyronitrile_stage0_sto-3g_cas4.json
examples/full_workflow/: README.md  full_workflow.ipynb  full_workflow.py
examples/n2_dissociation/: README.md  plot_results.py  run_pes_scan.py
qoro_maestro_pyscf/: __init__.py  active_space.py  adapt.py  ansatze.py  maestro_solver.py  qsci_solver.py  tapering.py
qoro_pyscf/: __init__.py  active_space.py  adapt.py  ansatze.py  backends.py  expectation.py  hamiltonian.py  properties.py  qoro_solver.py  qsci_solver.py  rdm.py  rotosolve.py  tapering.py  vqd_solver.py
tests/: test_active_space.py  test_ansatze.py  test_integration.py  test_qoro_maestro_pyscf.py  test_qsci.py  test_solver.py  test_tapering.py  test_vqd_solver.py
